[package]
name = "stft-viewer"
description = "View spectra!"
version = "0.0.0"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
plotters = "0.3.0"
plotters-canvas = "0.3.0"
rustfft = "4.0.0"
wasm-bindgen = "0.2.68"
web-sys = "0.3.45"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]
